--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Progate</title>
   </head>
   <body>
-    <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
-    <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+    <h1 class="title">It's my practice.</h1>
+    <p>test</p>
   </body>
 </html>
